新增春秋检

--- a/app/src/main/res/layout/fragment_guang_chuan_shu.xml
+++ b/app/src/main/res/layout/fragment_guang_chuan_shu.xml
@@ -3,10 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.yf.bx.tms.fragment.cqjxz.ADSSGuangLanFragment">
-
-
-    <include layout="@layout/add_lines"/>
+              tools:context="com.yf.bx.tms.fragment.cqjxz.GuangChuanShuFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,16 +21,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="运行管理单位"/>
+            android:text="设备型号"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,17 +37,29 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-
-            android:text="运维单位"/>
+            android:text="网元编号"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:singleLine="true"/>
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:gravity="center"
+            android:minWidth="90dp"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
@@ -72,16 +79,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="光缆区段"/>
+            android:text="生产厂商"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,7 +95,8 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-            android:text="光缆类型"/>
+            android:text="运维单位"
+            />
 
         <TextView
             android:layout_width="0dp"
@@ -98,8 +104,51 @@
             android:layout_weight="1"
             android:gravity="center"
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/linear_bg"
+        android:divider="@drawable/divider_line"
+        android:gravity="center_vertical"
+        android:minHeight="48dp"
+        android:orientation="horizontal"
+        android:showDividers="middle">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:minWidth="90dp"
+            android:text="投运时间"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:singleLine="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:gravity="center"
+            android:minWidth="90dp"
+            android:text="所属系统"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
