--- a/app/src/main/res/layout/fragment_jiao_huan_she_bei.xml
+++ b/app/src/main/res/layout/fragment_jiao_huan_she_bei.xml
@@ -1,12 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
               android:orientation="vertical"
-              tools:context="com.yf.bx.tms.fragment.cqjxz.ADSSGuangLanFragment">
-
-
-    <include layout="@layout/add_lines"/>
+             android:layout_height="match_parent"
+             tools:context="com.yf.bx.tms.fragment.cqjxz.JiaoHuanSheBeiFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,16 +21,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="运行管理单位"/>
+            android:text="设备型号"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,8 +37,7 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-
-            android:text="运维单位"/>
+            />
 
         <TextView
             android:layout_width="0dp"
@@ -51,8 +45,7 @@
             android:layout_weight="1"
             android:gravity="center"
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
     </LinearLayout>
 
@@ -72,16 +65,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="光缆区段"/>
+            android:text="生产厂商"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,18 +81,16 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-            android:text="光缆类型"/>
+            android:text="投运时间"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
     </LinearLayout>
-
     <include layout="@layout/common_list_view"/>
+
 </LinearLayout>
