--- a/app/src/main/res/layout/fragment_shu_ju_wang_she_bei.xml
+++ b/app/src/main/res/layout/fragment_shu_ju_wang_she_bei.xml
@@ -3,10 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.yf.bx.tms.fragment.cqjxz.ADSSGuangLanFragment">
-
-
-    <include layout="@layout/add_lines"/>
+              tools:context="com.yf.bx.tms.fragment.cqjxz.ShuJuWangSheBeiFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,15 +22,15 @@
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
 
-            android:text="运行管理单位"/>
+            android:text="设备型号"/>
 
         <TextView
+            android:id="@+id/textView6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,8 +39,7 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-
-            android:text="运维单位"/>
+            />
 
         <TextView
             android:layout_width="0dp"
@@ -51,8 +47,7 @@
             android:layout_weight="1"
             android:gravity="center"
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
     </LinearLayout>
 
@@ -73,15 +68,15 @@
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
 
-            android:text="光缆区段"/>
+            android:text="生产厂商"/>
 
         <TextView
+            android:id="@+id/textView5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,16 +85,16 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-            android:text="光缆类型"/>
+            android:text="投运时间"/>
 
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:gravity="center"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
