--- a/app/src/main/res/layout/fragment_tong_bu_she_bei.xml
+++ b/app/src/main/res/layout/fragment_tong_bu_she_bei.xml
@@ -1,12 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.yf.bx.tms.fragment.cqjxz.ADSSGuangLanFragment">
-
-
-    <include layout="@layout/add_lines"/>
+             tools:context="com.yf.bx.tms.fragment.cqjxz.TongBuSheBeiFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,16 +21,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="运行管理单位"/>
+            android:text="站名"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,17 +37,15 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-
-            android:text="运维单位"/>
+            android:text="检查人"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:singleLine="true"/>
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
 
     </LinearLayout>
 
@@ -72,16 +65,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="光缆区段"/>
+            android:text="设备型号"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,7 +81,8 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-            android:text="光缆类型"/>
+            android:text="检查时间"
+            android:id="@+id/textView8"/>
 
         <TextView
             android:layout_width="0dp"
@@ -98,10 +90,55 @@
             android:layout_weight="1"
             android:gravity="center"
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/linear_bg"
+        android:divider="@drawable/divider_line"
+        android:gravity="center_vertical"
+        android:minHeight="48dp"
+        android:orientation="horizontal"
+        android:showDividers="middle">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:minWidth="90dp"
+            android:text="生产厂商"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:singleLine="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:gravity="center"
+            android:minWidth="90dp"
+            android:text="投运时间"
+            android:id="@+id/textView7"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+
+            android:singleLine="true"/>
+
+    </LinearLayout>
+
 
     <include layout="@layout/common_list_view"/>
+
 </LinearLayout>
