--- a/app/src/main/res/layout/fragment_tong_xin_fang_shi.xml
+++ b/app/src/main/res/layout/fragment_tong_xin_fang_shi.xml
@@ -3,10 +3,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.yf.bx.tms.fragment.cqjxz.ADSSGuangLanFragment">
+              tools:context="com.yf.bx.tms.fragment.cqjxz.TongXinFangShiFragment">
 
-
-    <include layout="@layout/add_lines"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,16 +22,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="运行管理单位"/>
+            android:text="网关版本"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,18 +37,15 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:gravity="center"
-            android:minWidth="90dp"
-
-            android:text="运维单位"/>
+            android:minWidth="90dp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:singleLine="true"/>
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
 
     </LinearLayout>
 
@@ -72,16 +65,14 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
-
-            android:text="光缆区段"/>
+            android:text="生产厂商"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,7 +81,7 @@
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:minWidth="90dp"
-            android:text="光缆类型"/>
+            android:text="投运时间"            />
 
         <TextView
             android:layout_width="0dp"
@@ -98,8 +89,51 @@
             android:layout_weight="1"
             android:gravity="center"
 
-            android:singleLine="true"
-            android:text="sdfsdfsdfsdfsdf"/>
+            android:singleLine="true"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/linear_bg"
+        android:divider="@drawable/divider_line"
+        android:gravity="center_vertical"
+        android:minHeight="48dp"
+        android:orientation="horizontal"
+        android:showDividers="middle">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:minWidth="90dp"
+            android:text="型号"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:singleLine="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:gravity="center"
+            android:minWidth="90dp"
+            android:text="位置"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
