--- a/app/src/main/res/layout/fragment_zngl.xml
+++ b/app/src/main/res/layout/fragment_zngl.xml
@@ -48,9 +48,10 @@
 
         <LinearLayout
             style="@style/divider_linearlayout"
-            android:background="#EAF1F6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#EAF1F6"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
@@ -67,11 +68,17 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#797979"/>
+
         <LinearLayout
             style="@style/divider_linearlayout"
-            android:background="#DFEDF3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#DFEDF3"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
