--- a/app/src/main/res/layout/list_item_adss_guang_lan_item_add.xml
+++ b/app/src/main/res/layout/list_item_adss_guang_lan_item_add.xml
@@ -10,52 +10,24 @@
               android:showDividers="middle">
 
     <TextView
-        android:layout_width="0dp"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        style="@style/text_view_in_list"/>
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_weight="1"/>
+        style="@style/text_view_in_list"/>
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_weight="1"/>
+        style="@style/text_view_in_list"/>
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_weight="1"/>
+        style="@style/text_view_in_list"/>
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_weight="1"/>
+        style="@style/text_view_in_list"/>
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_weight="1"/>
+        style="@style/text_view_in_list"/>
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:layout_weight="1"/>
+        style="@style/text_view_in_list"/>
 
 </LinearLayout>
