--- a/app/src/main/res/layout/activity_cqj_xz.xml
+++ b/app/src/main/res/layout/activity_cqj_xz.xml
@@ -10,18 +10,31 @@
 
     <include layout="@layout/base_title_bar"/>
 
-    <HorizontalScrollView
-        android:id="@+id/scroll"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#546FB4">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/radio_button_area"
-            android:layout_width="match_parent"
+        <HorizontalScrollView
+            android:id="@+id/scroll"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
-    </HorizontalScrollView>
+            android:layout_weight="1"
+            android:background="#546FB4">
+
+            <LinearLayout
+                android:id="@+id/radio_button_area"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"/>
+        </HorizontalScrollView>
+
+        <ImageView
+            android:id="@+id/ib_ksxj_wwyt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/wwyt"/>
+    </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
