--- a/app/src/main/res/layout/layout_cqj_xzfooter.xml
+++ b/app/src/main/res/layout/layout_cqj_xzfooter.xml
@@ -1,8 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:orientation="horizontal">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
+
+    <RelativeLayout
+        android:id="@+id/area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/linear_bg"
+        android:orientation="horizontal"
+        android:padding="4dp">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:text="其他："
+            android:textSize="18sp"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/title"
+            android:layout_weight="1"
+            android:background="@null"
+            android:gravity="top"
+            android:lines="5"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -22,10 +49,10 @@
         <Button
             android:layout_width="120dp"
             android:layout_height="80dp"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="60dp"
             android:background="@drawable/button_blue_bg"
             android:text="取消"
             android:textColor="@color/white"
             android:textSize="20sp"/>
     </LinearLayout>
-</FrameLayout>
+</LinearLayout>
