新增春秋检

--- a/app/src/main/res/layout/fragment_zngl.xml
+++ b/app/src/main/res/layout/fragment_zngl.xml
@@ -39,6 +39,14 @@
             android:text="原因"
             android:textColor="@color/white"
             android:textSize="18sp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="照片"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
     </LinearLayout>
 
     <LinearLayout
