--- a/app/src/main/res/layout/fragment_jiao_huan_she_bei.xml
+++ b/app/src/main/res/layout/fragment_jiao_huan_she_bei.xml
@@ -22,8 +22,8 @@
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
             android:text="设备型号"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -38,8 +38,8 @@
             android:gravity="center"
             android:minWidth="90dp"
             />
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -66,8 +66,8 @@
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
             android:text="生产厂商"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -82,8 +82,8 @@
             android:gravity="center"
             android:minWidth="90dp"
             android:text="投运时间"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
