--- a/app/src/main/res/layout/fragment_opglguang_lan.xml
+++ b/app/src/main/res/layout/fragment_opglguang_lan.xml
@@ -25,8 +25,8 @@
             android:minWidth="90dp"
 
             android:text="运行管理单位"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -42,8 +42,8 @@
             android:minWidth="90dp"
 
             android:text="运维单位"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -59,8 +59,8 @@
             android:minWidth="90dp"
 
             android:text="线路名称"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -87,8 +87,8 @@
             android:minWidth="90dp"
 
             android:text="光缆区段"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -104,8 +104,8 @@
             android:gravity="center"
             android:minWidth="90dp"
             android:text="光缆类型"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -121,8 +121,8 @@
             android:gravity="center"
             android:minWidth="90dp"
             android:text="负责人"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
