--- a/app/src/main/res/layout/fragment_tong_xin_fang_shi.xml
+++ b/app/src/main/res/layout/fragment_tong_xin_fang_shi.xml
@@ -24,7 +24,8 @@
             android:minWidth="90dp"
             android:text="网关版本"/>
 
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -66,8 +67,8 @@
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
             android:text="生产厂商"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -82,8 +83,8 @@
             android:gravity="center"
             android:minWidth="90dp"
             android:text="投运时间"            />
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -111,8 +112,8 @@
             android:layout_marginRight="16dp"
             android:minWidth="90dp"
             android:text="型号"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -127,8 +128,8 @@
             android:gravity="center"
             android:minWidth="90dp"
             android:text="位置"/>
-
-        <TextView
+        <EditText
+            style="@style/text_view_in_list.noback"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
