--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
      android:layout_height="240px"
         android:layout_gravity="right"
         android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/avatar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
