--- a/app/src/main/res/layout/list_item_text_view_11.xml
+++ b/app/src/main/res/layout/list_item_text_view_11.xml
@@ -8,59 +8,59 @@
               android:minHeight="60dp"
               android:orientation="horizontal">
 
-    <TextView
+    <EditText
         android:id="@+id/index"
-        style="@style/text_view_in_list"
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="纤芯"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="全长/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="全程损耗/dB"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="平均损耗dB/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="故障点/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="故障点/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="故障点/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="故障点/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="故障点/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1"
         android:text="故障点/km"/>
 
-    <TextView
-        style="@style/text_view_in_list"
+    <EditText
+        style="@style/text_view_in_list.noback"
         android:layout_weight="1.5"
         android:text="备注"/>
 </LinearLayout>
